src/sqc/parser.output
Zustand 21 Konflikte: 1 Schiebe/Reduziere
Zustand 43 Konflikte: 1 Schiebe/Reduziere
Zustand 49 Konflikte: 1 Schiebe/Reduziere
Zustand 70 Konflikte: 1 Schiebe/Reduziere
Zustand 163 Konflikte: 1 Schiebe/Reduziere


Grammatik

    0 $accept: start NA

    1 start: %empty
    2      | statements

    3 statements: statement
    4           | statement statements

    5 statement: "return" exp01 ";"
    6          | "return" ";"
    7          | "throw" exp01 ";"
    8          | vardecl ";"
    9          | funcdecl
   10          | if
   11          | for
   12          | while
   13          | trycatch
   14          | switch
   15          | assignment ";"
   16          | exp01 ";"
   17          | ";"
   18          | error

   19 assignment: IDENT "=" exp01
   20           | IDENT "[" exp01 "]" "=" exp01

   21 vardecl: "let" IDENT "=" exp01
   22        | "let" IDENT "be" exp01
   23        | "let" IDENT
   24        | "private" IDENT "=" exp01
   25        | "private" IDENT "be" exp01
   26        | "private" IDENT

   27 funcdecl: "function" IDENT funchead codeblock

   28 function: "function" funchead codeblock

   29 funchead: "(" ")"
   30         | "(" arglist ")"

   31 arglist: IDENT
   32        | IDENT ","
   33        | IDENT "," arglist

   34 codeblock: statement
   35          | "{" "}"
   36          | "{" statements "}"

   37 if: "if" "(" exp01 ")" codeblock
   38   | "if" "(" exp01 ")" codeblock "else" codeblock

   39 for: "for" IDENT "from" exp01 "to" exp01 codeblock
   40    | "for" IDENT "from" exp01 "to" exp01 "step" exp01 codeblock
   41    | "for" "(" IDENT ":" exp01 ")" codeblock

   42 while: "while" "(" exp01 ")" codeblock
   43      | "do" codeblock "while" "(" exp01 ")"

   44 trycatch: "try" codeblock "catch" "(" IDENT ")" codeblock

   45 switch: "switch" "(" exp01 ")" "{" caselist "}"

   46 caselist: case
   47         | case caselist

   48 case: "case" exp01 ":" codeblock
   49     | "case" exp01 ":"
   50     | "default" ":" codeblock

   51 exp01: exp02
   52      | exp02 "?" exp01 ":" exp01

   53 exp02: exp03
   54      | exp03 "||" exp03

   55 exp03: exp04
   56      | exp04 "&&" exp04

   57 exp04: exp05
   58      | exp05 "===" exp05
   59      | exp05 "!==" exp05
   60      | exp05 "==" exp05
   61      | exp05 "!=" exp05

   62 exp05: exp06
   63      | exp06 "<" exp06
   64      | exp06 "<=" exp06
   65      | exp06 ">" exp06
   66      | exp06 ">=" exp06

   67 exp06: exp07
   68      | exp07 "+" exp07
   69      | exp07 "-" exp07

   70 exp07: exp08
   71      | exp08 "*" exp08
   72      | exp08 "/" exp08
   73      | exp08 "%" exp08

   74 exp08: exp09
   75      | "!" exp09

   76 exp09: expp
   77      | expp "." IDENT "(" explist ")"
   78      | exp09 "[" exp01 "]"

   79 expp: "(" exp01 ")"
   80     | IDENT "(" explist ")"
   81     | IDENT
   82     | value

   83 value: function
   84      | STRING
   85      | array
   86      | NUMBER
   87      | "true"
   88      | "false"
   89      | "nil"

   90 array: "[" "]"
   91      | "[" explist "]"

   92 explist: exp01
   93        | exp01 ","
   94        | exp01 "," explist


Terminale und die Regeln, in denen sie verwendet werden

NA (0) 0
error (256) 18
"return" (258) 5 6
"throw" (259) 7
"let" (260) 21 22 23
"be" (261) 22 25
"function" (262) 27 28
"if" (263) 37 38
"else" (264) 38
"from" (265) 39 40
"to" (266) 39 40
"step" (267) 40
"while" (268) 42 43
"do" (269) 43
"try" (270) 44
"catch" (271) 44
"switch" (272) 45
"case" (273) 48 49
"default" (274) 50
"nil" (275) 89
"true" (276) 87
"false" (277) 88
"for" (278) 39 40 41
"private" (279) 24 25 26
":" (280) 41 48 49 50 52
"{" (281) 35 36 45
"}" (282) 35 36 45
"(" (283) 29 30 37 38 41 42 43 44 45 77 79 80
")" (284) 29 30 37 38 41 42 43 44 45 77 79 80
"[" (285) 20 78 90 91
"]" (286) 20 78 90 91
";" (287) 5 6 7 8 15 16 17
"," (288) 32 33 93 94
"+" (289) 68
"-" (290) 69
"<=" (291) 64
"<" (292) 63
">=" (293) 66
">" (294) 65
"===" (295) 58
"==" (296) 60
"!==" (297) 59
"!=" (298) 61
"!" (299) 75
"=" (300) 19 20 21 24
"&&" (301) 56
"/" (302) 72
"*" (303) 71
"%" (304) 73
"?" (305) 52
"||" (306) 54
"." (307) 77
NUMBER (308) 86
IDENT (309) 19 20 21 22 23 24 25 26 27 31 32 33 39 40 41 44 77 80 81
STRING (310) 84


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (56)
    auf der linken Seite: 0
start (57)
    auf der linken Seite: 1 2, auf der rechten Seite: 0
statements (58)
    auf der linken Seite: 3 4, auf der rechten Seite: 2 4 36
statement (59)
    auf der linken Seite: 5 6 7 8 9 10 11 12 13 14 15 16 17 18, auf der rechten Seite:
    3 4 34
assignment (60)
    auf der linken Seite: 19 20, auf der rechten Seite: 15
vardecl (61)
    auf der linken Seite: 21 22 23 24 25 26, auf der rechten Seite:
    8
funcdecl (62)
    auf der linken Seite: 27, auf der rechten Seite: 9
function (63)
    auf der linken Seite: 28, auf der rechten Seite: 83
funchead (64)
    auf der linken Seite: 29 30, auf der rechten Seite: 27 28
arglist (65)
    auf der linken Seite: 31 32 33, auf der rechten Seite: 30 33
codeblock (66)
    auf der linken Seite: 34 35 36, auf der rechten Seite: 27 28 37
    38 39 40 41 42 43 44 48 50
if (67)
    auf der linken Seite: 37 38, auf der rechten Seite: 10
for (68)
    auf der linken Seite: 39 40 41, auf der rechten Seite: 11
while (69)
    auf der linken Seite: 42 43, auf der rechten Seite: 12
trycatch (70)
    auf der linken Seite: 44, auf der rechten Seite: 13
switch (71)
    auf der linken Seite: 45, auf der rechten Seite: 14
caselist (72)
    auf der linken Seite: 46 47, auf der rechten Seite: 45 47
case (73)
    auf der linken Seite: 48 49 50, auf der rechten Seite: 46 47
exp01 (74)
    auf der linken Seite: 51 52, auf der rechten Seite: 5 7 16 19 20
    21 22 24 25 37 38 39 40 41 42 43 45 48 49 52 78 79 92 93 94
exp02 (75)
    auf der linken Seite: 53 54, auf der rechten Seite: 51 52
exp03 (76)
    auf der linken Seite: 55 56, auf der rechten Seite: 53 54
exp04 (77)
    auf der linken Seite: 57 58 59 60 61, auf der rechten Seite: 55
    56
exp05 (78)
    auf der linken Seite: 62 63 64 65 66, auf der rechten Seite: 57
    58 59 60 61
exp06 (79)
    auf der linken Seite: 67 68 69, auf der rechten Seite: 62 63 64
    65 66
exp07 (80)
    auf der linken Seite: 70 71 72 73, auf der rechten Seite: 67 68
    69
exp08 (81)
    auf der linken Seite: 74 75, auf der rechten Seite: 70 71 72 73
exp09 (82)
    auf der linken Seite: 76 77 78, auf der rechten Seite: 74 75 78
expp (83)
    auf der linken Seite: 79 80 81 82, auf der rechten Seite: 76 77
value (84)
    auf der linken Seite: 83 84 85 86 87 88 89, auf der rechten Seite:
    82
array (85)
    auf der linken Seite: 90 91, auf der rechten Seite: 85
explist (86)
    auf der linken Seite: 92 93 94, auf der rechten Seite: 77 80 91
    94


Zustand 0

    0 $accept: . start NA

    error       schiebe und gehe zu Zustand 1 über
    "return"    schiebe und gehe zu Zustand 2 über
    "throw"     schiebe und gehe zu Zustand 3 über
    "let"       schiebe und gehe zu Zustand 4 über
    "function"  schiebe und gehe zu Zustand 5 über
    "if"        schiebe und gehe zu Zustand 6 über
    "while"     schiebe und gehe zu Zustand 7 über
    "do"        schiebe und gehe zu Zustand 8 über
    "try"       schiebe und gehe zu Zustand 9 über
    "switch"    schiebe und gehe zu Zustand 10 über
    "nil"       schiebe und gehe zu Zustand 11 über
    "true"      schiebe und gehe zu Zustand 12 über
    "false"     schiebe und gehe zu Zustand 13 über
    "for"       schiebe und gehe zu Zustand 14 über
    "private"   schiebe und gehe zu Zustand 15 über
    "("         schiebe und gehe zu Zustand 16 über
    "["         schiebe und gehe zu Zustand 17 über
    ";"         schiebe und gehe zu Zustand 18 über
    "!"         schiebe und gehe zu Zustand 19 über
    NUMBER      schiebe und gehe zu Zustand 20 über
    IDENT       schiebe und gehe zu Zustand 21 über
    STRING      schiebe und gehe zu Zustand 22 über

    NA  reduziere mit Regel 1 (start)

    start       gehe zu Zustand 23 über
    statements  gehe zu Zustand 24 über
    statement   gehe zu Zustand 25 über
    assignment  gehe zu Zustand 26 über
    vardecl     gehe zu Zustand 27 über
    funcdecl    gehe zu Zustand 28 über
    function    gehe zu Zustand 29 über
    if          gehe zu Zustand 30 über
    for         gehe zu Zustand 31 über
    while       gehe zu Zustand 32 über
    trycatch    gehe zu Zustand 33 über
    switch      gehe zu Zustand 34 über
    exp01       gehe zu Zustand 35 über
    exp02       gehe zu Zustand 36 über
    exp03       gehe zu Zustand 37 über
    exp04       gehe zu Zustand 38 über
    exp05       gehe zu Zustand 39 über
    exp06       gehe zu Zustand 40 über
    exp07       gehe zu Zustand 41 über
    exp08       gehe zu Zustand 42 über
    exp09       gehe zu Zustand 43 über
    expp        gehe zu Zustand 44 über
    value       gehe zu Zustand 45 über
    array       gehe zu Zustand 46 über


Zustand 1

   18 statement: error .

    $default  reduziere mit Regel 18 (statement)


Zustand 2

    5 statement: "return" . exp01 ";"
    6          | "return" . ";"

    "function"  schiebe und gehe zu Zustand 47 über
    "nil"       schiebe und gehe zu Zustand 11 über
    "true"      schiebe und gehe zu Zustand 12 über
    "false"     schiebe und gehe zu Zustand 13 über
    "("         schiebe und gehe zu Zustand 16 über
    "["         schiebe und gehe zu Zustand 17 über
    ";"         schiebe und gehe zu Zustand 48 über
    "!"         schiebe und gehe zu Zustand 19 über
    NUMBER      schiebe und gehe zu Zustand 20 über
    IDENT       schiebe und gehe zu Zustand 49 über
    STRING      schiebe und gehe zu Zustand 22 über

    function  gehe zu Zustand 29 über
    exp01     gehe zu Zustand 50 über
    exp02     gehe zu Zustand 36 über
    exp03     gehe zu Zustand 37 über
    exp04     gehe zu Zustand 38 über
    exp05     gehe zu Zustand 39 über
    exp06     gehe zu Zustand 40 über
    exp07     gehe zu Zustand 41 über
    exp08     gehe zu Zustand 42 über
    exp09     gehe zu Zustand 43 über
    expp      gehe zu Zustand 44 über
    value     gehe zu Zustand 45 über
    array     gehe zu Zustand 46 über


Zustand 3

    7 statement: "throw" . exp01 ";"

    "function"  schiebe und gehe zu Zustand 47 über
    "nil"       schiebe und gehe zu Zustand 11 über
    "true"      schiebe und gehe zu Zustand 12 über
    "false"     schiebe und gehe zu Zustand 13 über
    "("         schiebe und gehe zu Zustand 16 über
    "["         schiebe und gehe zu Zustand 17 über
    "!"         schiebe und gehe zu Zustand 19 über
    NUMBER      schiebe und gehe zu Zustand 20 über
    IDENT       schiebe und gehe zu Zustand 49 über
    STRING      schiebe und gehe zu Zustand 22 über

    function  gehe zu Zustand 29 über
    exp01     gehe zu Zustand 51 über
    exp02     gehe zu Zustand 36 über
    exp03     gehe zu Zustand 37 über
    exp04     gehe zu Zustand 38 über
    exp05     gehe zu Zustand 39 über
    exp06     gehe zu Zustand 40 über
    exp07     gehe zu Zustand 41 über
    exp08     gehe zu Zustand 42 über
    exp09     gehe zu Zustand 43 über
    expp      gehe zu Zustand 44 über
    value     gehe zu Zustand 45 über
    array     gehe zu Zustand 46 über


Zustand 4

   21 vardecl: "let" . IDENT "=" exp01
   22        | "let" . IDENT "be" exp01
   23        | "let" . IDENT

    IDENT  schiebe und gehe zu Zustand 52 über


Zustand 5

   27 funcdecl: "function" . IDENT funchead codeblock
   28 function: "function" . funchead codeblock

    "("    schiebe und gehe zu Zustand 53 über
    IDENT  schiebe und gehe zu Zustand 54 über

    funchead  gehe zu Zustand 55 über


Zustand 6

   37 if: "if" . "(" exp01 ")" codeblock
   38   | "if" . "(" exp01 ")" codeblock "else" codeblock

    "("  schiebe und gehe zu Zustand 56 über


Zustand 7

   42 while: "while" . "(" exp01 ")" codeblock

    "("  schiebe und gehe zu Zustand 57 über


Zustand 8

   43 while: "do" . codeblock "while" "(" exp01 ")"

    error       schiebe und gehe zu Zustand 1 über
    "return"    schiebe und gehe zu Zustand 2 über
    "throw"     schiebe und gehe zu Zustand 3 über
    "let"       schiebe und gehe zu Zustand 4 über
    "function"  schiebe und gehe zu Zustand 5 über
    "if"        schiebe und gehe zu Zustand 6 über
    "while"     schiebe und gehe zu Zustand 7 über
    "do"        schiebe und gehe zu Zustand 8 über
    "try"       schiebe und gehe zu Zustand 9 über
    "switch"    schiebe und gehe zu Zustand 10 über
    "nil"       schiebe und gehe zu Zustand 11 über
    "true"      schiebe und gehe zu Zustand 12 über
    "false"     schiebe und gehe zu Zustand 13 über
    "for"       schiebe und gehe zu Zustand 14 über
    "private"   schiebe und gehe zu Zustand 15 über
    "{"         schiebe und gehe zu Zustand 58 über
    "("         schiebe und gehe zu Zustand 16 über
    "["         schiebe und gehe zu Zustand 17 über
    ";"         schiebe und gehe zu Zustand 18 über
    "!"         schiebe und gehe zu Zustand 19 über
    NUMBER      schiebe und gehe zu Zustand 20 über
    IDENT       schiebe und gehe zu Zustand 21 über
    STRING      schiebe und gehe zu Zustand 22 über

    statement   gehe zu Zustand 59 über
    assignment  gehe zu Zustand 26 über
    vardecl     gehe zu Zustand 27 über
    funcdecl    gehe zu Zustand 28 über
    function    gehe zu Zustand 29 über
    codeblock   gehe zu Zustand 60 über
    if          gehe zu Zustand 30 über
    for         gehe zu Zustand 31 über
    while       gehe zu Zustand 32 über
    trycatch    gehe zu Zustand 33 über
    switch      gehe zu Zustand 34 über
    exp01       gehe zu Zustand 35 über
    exp02       gehe zu Zustand 36 über
    exp03       gehe zu Zustand 37 über
    exp04       gehe zu Zustand 38 über
    exp05       gehe zu Zustand 39 über
    exp06       gehe zu Zustand 40 über
    exp07       gehe zu Zustand 41 über
    exp08       gehe zu Zustand 42 über
    exp09       gehe zu Zustand 43 über
    expp        gehe zu Zustand 44 über
    value       gehe zu Zustand 45 über
    array       gehe zu Zustand 46 über


Zustand 9

   44 trycatch: "try" . codeblock "catch" "(" IDENT ")" codeblock

    error       schiebe und gehe zu Zustand 1 über
    "return"    schiebe und gehe zu Zustand 2 über
    "throw"     schiebe und gehe zu Zustand 3 über
    "let"       schiebe und gehe zu Zustand 4 über
    "function"  schiebe und gehe zu Zustand 5 über
    "if"        schiebe und gehe zu Zustand 6 über
    "while"     schiebe und gehe zu Zustand 7 über
    "do"        schiebe und gehe zu Zustand 8 über
    "try"       schiebe und gehe zu Zustand 9 über
    "switch"    schiebe und gehe zu Zustand 10 über
    "nil"       schiebe und gehe zu Zustand 11 über
    "true"      schiebe und gehe zu Zustand 12 über
    "false"     schiebe und gehe zu Zustand 13 über
    "for"       schiebe und gehe zu Zustand 14 über
    "private"   schiebe und gehe zu Zustand 15 über
    "{"         schiebe und gehe zu Zustand 58 über
    "("         schiebe und gehe zu Zustand 16 über
    "["         schiebe und gehe zu Zustand 17 über
    ";"         schiebe und gehe zu Zustand 18 über
    "!"         schiebe und gehe zu Zustand 19 über
    NUMBER      schiebe und gehe zu Zustand 20 über
    IDENT       schiebe und gehe zu Zustand 21 über
    STRING      schiebe und gehe zu Zustand 22 über

    statement   gehe zu Zustand 59 über
    assignment  gehe zu Zustand 26 über
    vardecl     gehe zu Zustand 27 über
    funcdecl    gehe zu Zustand 28 über
    function    gehe zu Zustand 29 über
    codeblock   gehe zu Zustand 61 über
    if          gehe zu Zustand 30 über
    for         gehe zu Zustand 31 über
    while       gehe zu Zustand 32 über
    trycatch    gehe zu Zustand 33 über
    switch      gehe zu Zustand 34 über
    exp01       gehe zu Zustand 35 über
    exp02       gehe zu Zustand 36 über
    exp03       gehe zu Zustand 37 über
    exp04       gehe zu Zustand 38 über
    exp05       gehe zu Zustand 39 über
    exp06       gehe zu Zustand 40 über
    exp07       gehe zu Zustand 41 über
    exp08       gehe zu Zustand 42 über
    exp09       gehe zu Zustand 43 über
    expp        gehe zu Zustand 44 über
    value       gehe zu Zustand 45 über
    array       gehe zu Zustand 46 über


Zustand 10

   45 switch: "switch" . "(" exp01 ")" "{" caselist "}"

    "("  schiebe und gehe zu Zustand 62 über


Zustand 11

   89 value: "nil" .

    $default  reduziere mit Regel 89 (value)


Zustand 12

   87 value: "true" .

    $default  reduziere mit Regel 87 (value)


Zustand 13

   88 value: "false" .

    $default  reduziere mit Regel 88 (value)


Zustand 14

   39 for: "for" . IDENT "from" exp01 "to" exp01 codeblock
   40    | "for" . IDENT "from" exp01 "to" exp01 "step" exp01 codeblock
   41    | "for" . "(" IDENT ":" exp01 ")" codeblock

    "("    schiebe und gehe zu Zustand 63 über
    IDENT  schiebe und gehe zu Zustand 64 über


Zustand 15

   24 vardecl: "private" . IDENT "=" exp01
   25        | "private" . IDENT "be" exp01
   26        | "private" . IDENT

    IDENT  schiebe und gehe zu Zustand 65 über


Zustand 16

   79 expp: "(" . exp01 ")"

    "function"  schiebe und gehe zu Zustand 47 über
    "nil"       schiebe und gehe zu Zustand 11 über
    "true"      schiebe und gehe zu Zustand 12 über
    "false"     schiebe und gehe zu Zustand 13 über
    "("         schiebe und gehe zu Zustand 16 über
    "["         schiebe und gehe zu Zustand 17 über
    "!"         schiebe und gehe zu Zustand 19 über
    NUMBER      schiebe und gehe zu Zustand 20 über
    IDENT       schiebe und gehe zu Zustand 49 über
    STRING      schiebe und gehe zu Zustand 22 über

    function  gehe zu Zustand 29 über
    exp01     gehe zu Zustand 66 über
    exp02     gehe zu Zustand 36 über
    exp03     gehe zu Zustand 37 über
    exp04     gehe zu Zustand 38 über
    exp05     gehe zu Zustand 39 über
    exp06     gehe zu Zustand 40 über
    exp07     gehe zu Zustand 41 über
    exp08     gehe zu Zustand 42 über
    exp09     gehe zu Zustand 43 über
    expp      gehe zu Zustand 44 über
    value     gehe zu Zustand 45 über
    array     gehe zu Zustand 46 über


Zustand 17

   90 array: "[" . "]"
   91      | "[" . explist "]"

    "function"  schiebe und gehe zu Zustand 47 über
    "nil"       schiebe und gehe zu Zustand 11 über
    "true"      schiebe und gehe zu Zustand 12 über
    "false"     schiebe und gehe zu Zustand 13 über
    "("         schiebe und gehe zu Zustand 16 über
    "["         schiebe und gehe zu Zustand 17 über
    "]"         schiebe und gehe zu Zustand 67 über
    "!"         schiebe und gehe zu Zustand 19 über
    NUMBER      schiebe und gehe zu Zustand 20 über
    IDENT       schiebe und gehe zu Zustand 49 über
    STRING      schiebe und gehe zu Zustand 22 über

    function  gehe zu Zustand 29 über
    exp01     gehe zu Zustand 68 über
    exp02     gehe zu Zustand 36 über
    exp03     gehe zu Zustand 37 über
    exp04     gehe zu Zustand 38 über
    exp05     gehe zu Zustand 39 über
    exp06     gehe zu Zustand 40 über
    exp07     gehe zu Zustand 41 über
    exp08     gehe zu Zustand 42 über
    exp09     gehe zu Zustand 43 über
    expp      gehe zu Zustand 44 über
    value     gehe zu Zustand 45 über
    array     gehe zu Zustand 46 über
    explist   gehe zu Zustand 69 über


Zustand 18

   17 statement: ";" .

    $default  reduziere mit Regel 17 (statement)


Zustand 19

   75 exp08: "!" . exp09

    "function"  schiebe und gehe zu Zustand 47 über
    "nil"       schiebe und gehe zu Zustand 11 über
    "true"      schiebe und gehe zu Zustand 12 über
    "false"     schiebe und gehe zu Zustand 13 über
    "("         schiebe und gehe zu Zustand 16 über
    "["         schiebe und gehe zu Zustand 17 über
    NUMBER      schiebe und gehe zu Zustand 20 über
    IDENT       schiebe und gehe zu Zustand 49 über
    STRING      schiebe und gehe zu Zustand 22 über

    function  gehe zu Zustand 29 über
    exp09     gehe zu Zustand 70 über
    expp      gehe zu Zustand 44 über
    value     gehe zu Zustand 45 über
    array     gehe zu Zustand 46 über


Zustand 20

   86 value: NUMBER .

    $default  reduziere mit Regel 86 (value)


Zustand 21

   19 assignment: IDENT . "=" exp01
   20           | IDENT . "[" exp01 "]" "=" exp01
   80 expp: IDENT . "(" explist ")"
   81     | IDENT .

    "("  schiebe und gehe zu Zustand 71 über
    "["  schiebe und gehe zu Zustand 72 über
    "="  schiebe und gehe zu Zustand 73 über

    "["       [reduziere mit Regel 81 (expp)]
    $default  reduziere mit Regel 81 (expp)


Zustand 22

   84 value: STRING .

    $default  reduziere mit Regel 84 (value)


Zustand 23

    0 $accept: start . NA

    NA  schiebe und gehe zu Zustand 74 über


Zustand 24

    2 start: statements .

    $default  reduziere mit Regel 2 (start)


Zustand 25

    3 statements: statement .
    4           | statement . statements

    error       schiebe und gehe zu Zustand 1 über
    "return"    schiebe und gehe zu Zustand 2 über
    "throw"     schiebe und gehe zu Zustand 3 über
    "let"       schiebe und gehe zu Zustand 4 über
    "function"  schiebe und gehe zu Zustand 5 über
    "if"        schiebe und gehe zu Zustand 6 über
    "while"     schiebe und gehe zu Zustand 7 über
    "do"        schiebe und gehe zu Zustand 8 über
    "try"       schiebe und gehe zu Zustand 9 über
    "switch"    schiebe und gehe zu Zustand 10 über
    "nil"       schiebe und gehe zu Zustand 11 über
    "true"      schiebe und gehe zu Zustand 12 über
    "false"     schiebe und gehe zu Zustand 13 über
    "for"       schiebe und gehe zu Zustand 14 über
    "private"   schiebe und gehe zu Zustand 15 über
    "("         schiebe und gehe zu Zustand 16 über
    "["         schiebe und gehe zu Zustand 17 über
    ";"         schiebe und gehe zu Zustand 18 über
    "!"         schiebe und gehe zu Zustand 19 über
    NUMBER      schiebe und gehe zu Zustand 20 über
    IDENT       schiebe und gehe zu Zustand 21 über
    STRING      schiebe und gehe zu Zustand 22 über

    NA   reduziere mit Regel 3 (statements)
    "}"  reduziere mit Regel 3 (statements)

    statements  gehe zu Zustand 75 über
    statement   gehe zu Zustand 25 über
    assignment  gehe zu Zustand 26 über
    vardecl     gehe zu Zustand 27 über
    funcdecl    gehe zu Zustand 28 über
    function    gehe zu Zustand 29 über
    if          gehe zu Zustand 30 über
    for         gehe zu Zustand 31 über
    while       gehe zu Zustand 32 über
    trycatch    gehe zu Zustand 33 über
    switch      gehe zu Zustand 34 über
    exp01       gehe zu Zustand 35 über
    exp02       gehe zu Zustand 36 über
    exp03       gehe zu Zustand 37 über
    exp04       gehe zu Zustand 38 über
    exp05       gehe zu Zustand 39 über
    exp06       gehe zu Zustand 40 über
    exp07       gehe zu Zustand 41 über
    exp08       gehe zu Zustand 42 über
    exp09       gehe zu Zustand 43 über
    expp        gehe zu Zustand 44 über
    value       gehe zu Zustand 45 über
    array       gehe zu Zustand 46 über


Zustand 26

   15 statement: assignment . ";"

    ";"  schiebe und gehe zu Zustand 76 über


Zustand 27

    8 statement: vardecl . ";"

    ";"  schiebe und gehe zu Zustand 77 über


Zustand 28

    9 statement: funcdecl .

    $default  reduziere mit Regel 9 (statement)


Zustand 29

   83 value: function .

    $default  reduziere mit Regel 83 (value)


Zustand 30

   10 statement: if .

    $default  reduziere mit Regel 10 (statement)


Zustand 31

   11 statement: for .

    $default  reduziere mit Regel 11 (statement)


Zustand 32

   12 statement: while .

    $default  reduziere mit Regel 12 (statement)


Zustand 33

   13 statement: trycatch .

    $default  reduziere mit Regel 13 (statement)


Zustand 34

   14 statement: switch .

    $default  reduziere mit Regel 14 (statement)


Zustand 35

   16 statement: exp01 . ";"

    ";"  schiebe und gehe zu Zustand 78 über


Zustand 36

   51 exp01: exp02 .
   52      | exp02 . "?" exp01 ":" exp01

    "?"  schiebe und gehe zu Zustand 79 über

    $default  reduziere mit Regel 51 (exp01)


Zustand 37

   53 exp02: exp03 .
   54      | exp03 . "||" exp03

    "||"  schiebe und gehe zu Zustand 80 über

    $default  reduziere mit Regel 53 (exp02)


Zustand 38

   55 exp03: exp04 .
   56      | exp04 . "&&" exp04

    "&&"  schiebe und gehe zu Zustand 81 über

    $default  reduziere mit Regel 55 (exp03)


Zustand 39

   57 exp04: exp05 .
   58      | exp05 . "===" exp05
   59      | exp05 . "!==" exp05
   60      | exp05 . "==" exp05
   61      | exp05 . "!=" exp05

    "==="  schiebe und gehe zu Zustand 82 über
    "=="   schiebe und gehe zu Zustand 83 über
    "!=="  schiebe und gehe zu Zustand 84 über
    "!="   schiebe und gehe zu Zustand 85 über

    $default  reduziere mit Regel 57 (exp04)


Zustand 40

   62 exp05: exp06 .
   63      | exp06 . "<" exp06
   64      | exp06 . "<=" exp06
   65      | exp06 . ">" exp06
   66      | exp06 . ">=" exp06

    "<="  schiebe und gehe zu Zustand 86 über
    "<"   schiebe und gehe zu Zustand 87 über
    ">="  schiebe und gehe zu Zustand 88 über
    ">"   schiebe und gehe zu Zustand 89 über

    $default  reduziere mit Regel 62 (exp05)


Zustand 41

   67 exp06: exp07 .
   68      | exp07 . "+" exp07
   69      | exp07 . "-" exp07

    "+"  schiebe und gehe zu Zustand 90 über
    "-"  schiebe und gehe zu Zustand 91 über

    $default  reduziere mit Regel 67 (exp06)


Zustand 42

   70 exp07: exp08 .
   71      | exp08 . "*" exp08
   72      | exp08 . "/" exp08
   73      | exp08 . "%" exp08

    "/"  schiebe und gehe zu Zustand 92 über
    "*"  schiebe und gehe zu Zustand 93 über
    "%"  schiebe und gehe zu Zustand 94 über

    $default  reduziere mit Regel 70 (exp07)


Zustand 43

   74 exp08: exp09 .
   78 exp09: exp09 . "[" exp01 "]"

    "["  schiebe und gehe zu Zustand 95 über

    "["       [reduziere mit Regel 74 (exp08)]
    $default  reduziere mit Regel 74 (exp08)


Zustand 44

   76 exp09: expp .
   77      | expp . "." IDENT "(" explist ")"

    "."  schiebe und gehe zu Zustand 96 über

    $default  reduziere mit Regel 76 (exp09)


Zustand 45

   82 expp: value .

    $default  reduziere mit Regel 82 (expp)


Zustand 46

   85 value: array .

    $default  reduziere mit Regel 85 (value)


Zustand 47

   28 function: "function" . funchead codeblock

    "("  schiebe und gehe zu Zustand 53 über

    funchead  gehe zu Zustand 55 über


Zustand 48

    6 statement: "return" ";" .

    $default  reduziere mit Regel 6 (statement)


Zustand 49

   80 expp: IDENT . "(" explist ")"
   81     | IDENT .

    "("  schiebe und gehe zu Zustand 71 über

    "("       [reduziere mit Regel 81 (expp)]
    $default  reduziere mit Regel 81 (expp)


Zustand 50

    5 statement: "return" exp01 . ";"

    ";"  schiebe und gehe zu Zustand 97 über


Zustand 51

    7 statement: "throw" exp01 . ";"

    ";"  schiebe und gehe zu Zustand 98 über


Zustand 52

   21 vardecl: "let" IDENT . "=" exp01
   22        | "let" IDENT . "be" exp01
   23        | "let" IDENT .

    "be"  schiebe und gehe zu Zustand 99 über
    "="   schiebe und gehe zu Zustand 100 über

    $default  reduziere mit Regel 23 (vardecl)


Zustand 53

   29 funchead: "(" . ")"
   30         | "(" . arglist ")"

    ")"    schiebe und gehe zu Zustand 101 über
    IDENT  schiebe und gehe zu Zustand 102 über

    arglist  gehe zu Zustand 103 über


Zustand 54

   27 funcdecl: "function" IDENT . funchead codeblock

    "("  schiebe und gehe zu Zustand 53 über

    funchead  gehe zu Zustand 104 über


Zustand 55

   28 function: "function" funchead . codeblock

    error       schiebe und gehe zu Zustand 1 über
    "return"    schiebe und gehe zu Zustand 2 über
    "throw"     schiebe und gehe zu Zustand 3 über
    "let"       schiebe und gehe zu Zustand 4 über
    "function"  schiebe und gehe zu Zustand 5 über
    "if"        schiebe und gehe zu Zustand 6 über
    "while"     schiebe und gehe zu Zustand 7 über
    "do"        schiebe und gehe zu Zustand 8 über
    "try"       schiebe und gehe zu Zustand 9 über
    "switch"    schiebe und gehe zu Zustand 10 über
    "nil"       schiebe und gehe zu Zustand 11 über
    "true"      schiebe und gehe zu Zustand 12 über
    "false"     schiebe und gehe zu Zustand 13 über
    "for"       schiebe und gehe zu Zustand 14 über
    "private"   schiebe und gehe zu Zustand 15 über
    "{"         schiebe und gehe zu Zustand 58 über
    "("         schiebe und gehe zu Zustand 16 über
    "["         schiebe und gehe zu Zustand 17 über
    ";"         schiebe und gehe zu Zustand 18 über
    "!"         schiebe und gehe zu Zustand 19 über
    NUMBER      schiebe und gehe zu Zustand 20 über
    IDENT       schiebe und gehe zu Zustand 21 über
    STRING      schiebe und gehe zu Zustand 22 über

    statement   gehe zu Zustand 59 über
    assignment  gehe zu Zustand 26 über
    vardecl     gehe zu Zustand 27 über
    funcdecl    gehe zu Zustand 28 über
    function    gehe zu Zustand 29 über
    codeblock   gehe zu Zustand 105 über
    if          gehe zu Zustand 30 über
    for         gehe zu Zustand 31 über
    while       gehe zu Zustand 32 über
    trycatch    gehe zu Zustand 33 über
    switch      gehe zu Zustand 34 über
    exp01       gehe zu Zustand 35 über
    exp02       gehe zu Zustand 36 über
    exp03       gehe zu Zustand 37 über
    exp04       gehe zu Zustand 38 über
    exp05       gehe zu Zustand 39 über
    exp06       gehe zu Zustand 40 über
    exp07       gehe zu Zustand 41 über
    exp08       gehe zu Zustand 42 über
    exp09       gehe zu Zustand 43 über
    expp        gehe zu Zustand 44 über
    value       gehe zu Zustand 45 über
    array       gehe zu Zustand 46 über


Zustand 56

   37 if: "if" "(" . exp01 ")" codeblock
   38   | "if" "(" . exp01 ")" codeblock "else" codeblock

    "function"  schiebe und gehe zu Zustand 47 über
    "nil"       schiebe und gehe zu Zustand 11 über
    "true"      schiebe und gehe zu Zustand 12 über
    "false"     schiebe und gehe zu Zustand 13 über
    "("         schiebe und gehe zu Zustand 16 über
    "["         schiebe und gehe zu Zustand 17 über
    "!"         schiebe und gehe zu Zustand 19 über
    NUMBER      schiebe und gehe zu Zustand 20 über
    IDENT       schiebe und gehe zu Zustand 49 über
    STRING      schiebe und gehe zu Zustand 22 über
